Made chnages as per powerpipe mod

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@
 
 # Swap files
 *.swp
+
+# Steampipe variable files
+*.spvars
+*.auto.spvars
+
+# Powerpipe variable files
+*.ppvars
+*.auto.ppvars
